@@ -11,6 +11,10 @@
 		 (<i>Adam Franco</i>)
 		
 		<li/> New feature:  
+			When copying sites or other parts of a site, discussion posts can
+			now be coppied as well.
+		 (<i>Adam Franco</i>)
+		<li/> New feature:  
 			When viewing the logs screen, old logs are cleaned out as per a
 			configurable number of days.
 		 (<i>Adam Franco</i>)
