@@ -9,6 +9,10 @@
 		</important>
 		
 		<new author='adam'>
+			When copying sites or other parts of a site, discussion posts can
+			now be coppied as well.
+		</new>
+		<new author='adam'>
 			When viewing the logs screen, old logs are cleaned out as per a
 			configurable number of days.
 		</new>
